# reflex

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml  requirements.txt  setup.sh
RedDotSight/: cli.py  main.py
RedDotSight/modules/: yolo_tracker.py
Reflex/: cli.py  main.py
Reflex/modules/: automatic_tracker.py  manual_tracker.py  night_vision_mode.py  yolo_tracker.py
modules/: yolo_tracker.py
