[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "reflex"
version = "0.1.0"
description = "CLI tool for tracking people"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "RykerWilder" }
]
dependencies = [
  "click>=8.1",
  "opencv-python>=4.8.0",
  "ultralytics>=8.0.0",
  "numpy>=1.24.0"
]

[project.scripts]
reflex = "Reflex.cli:cli"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["Reflex*"]

[tool.setuptools.package-data]
Reflex = ["models/*.pt"]